Fixed date input on Chrome.
Chrome picker no longer overlaps with label.

--- a/source/demyo-web/src/main/webapp/css/demyo.blue-pink.less
+++ b/source/demyo-web/src/main/webapp/css/demyo.blue-pink.less
@@ -6,5 +6,6 @@
 @color-accent: rgb(255, 64, 129);
 @color-accent-contrast: rgb(255, 255, 255);
 @color-background-light-highlight: rgba(0, 0, 0, 0.05);
+@color-input-label: rgba(0, 0, 0, 0.26);
 
 @import "demyo/demyo.common.less";
